--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
 include ':app'
 include ':jeyksupport'
-project(':jeyksupport').projectDir = new File(rootDir, 'jeyksupport')
+project(':jeyksupport').projectDir = new File(rootDir, 'modules/jeyksupport')
